tolk-tester/tests/invalid-typing/err-6190.tolk
fun main() {
    var t = [[[], [], []], [], [[]]];
}

/**
@compilation_should_fail
@stderr type of `[...]` is `array<array<array<unknown>> | array<unknown>>`; probably, it's not what you expected
 */
